// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AccountsContainer /> > should render as expected when accounts exist 1`] = `
<div>
  <div
    class="d_flex flex-d_row ai_center jc_space-between mt_20px mb_20px"
  >
    <h1
      class="c_primary fs_1.5rem fw_bold lh_tight m_0 "
    >
      accounts
    </h1>
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_6 py_3 fs_sm lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_background c_text.primary bd_1px_solid bd-c_border hover:bg_accent hover:c_accent.foreground"
      data-state="closed"
      type="button"
    >
      addAccount
    </button>
  </div>
  <div
    class="d_grid grid-tc_1fr md:grid-tc_repeat(3,_1fr) gap_24px mb_32px"
  >
    <div
      class="bg-c_rgba(99,_99,_241,_0.1) bd_1px_solid bd-c_primary bdr_xl p_20px bx-sh_sm"
    >
      <p
        class="fs_xs fw_semibold lh_normal ls_normal c_gray.500 tt_uppercase m_0 "
      >
        Net Worth
      </p>
      <h2
        class="c_emerald.500 fs_1.875rem fw_bold mt_1 lh_tight m_0 "
      >
        £1,300
      </h2>
    </div>
    <div
      class="bg-c_surface bd_1px_solid bd-c_border bdr_xl p_20px bx-sh_sm"
    >
      <p
        class="fs_xs fw_semibold lh_normal ls_normal c_gray.500 tt_uppercase m_0 "
      >
        Total Assets
      </p>
      <h2
        class="c_green.500 fs_1.5rem fw_bold mt_1 lh_tight m_0 "
      >
        £1,800
      </h2>
    </div>
    <div
      class="bg-c_surface bd_1px_solid bd-c_border bdr_xl p_20px bx-sh_sm"
    >
      <p
        class="fs_xs fw_semibold lh_normal ls_normal c_gray.500 tt_uppercase m_0 "
      >
        Total Liabilities
      </p>
      <h2
        class="c_red.500 fs_1.5rem fw_bold mt_1 lh_tight m_0 "
      >
        £500
      </h2>
    </div>
  </div>
  <div
    class="d_flex flex-d_column gap_10 "
  >
    <div
      class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
    >
      <h2
        class="c_gray.600 fs_1.25rem fw_bold mb_4 lh_tight m_0 "
      >
        Current
      </h2>
      <div
        class="d_flex flex-wrap_wrap gap_20px mt_16px"
      >
        AccountsCard
        AccountsCard
      </div>
    </div>
    <div
      class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
    >
      <h2
        class="c_gray.600 fs_1.25rem fw_bold mb_4 lh_tight m_0 "
      >
        Saving
      </h2>
      <div
        class="d_flex flex-wrap_wrap gap_20px mt_16px"
      >
        AccountsCard
        AccountsCard
        AccountsCard
      </div>
    </div>
    <div
      class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
    >
      <h2
        class="c_gray.600 fs_1.25rem fw_bold mb_4 lh_tight m_0 "
      >
        Mortgage
      </h2>
      <div
        class="d_flex flex-wrap_wrap gap_20px mt_16px"
      >
        AccountsCard
      </div>
    </div>
    <div
      class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
    >
      <h2
        class="c_gray.600 fs_1.25rem fw_bold mb_4 lh_tight m_0 "
      >
        Loan
      </h2>
      <div
        class="d_flex flex-wrap_wrap gap_20px mt_16px"
      >
        AccountsCard
      </div>
    </div>
    <div
      class="bd-b_1px_solid bd-c_border pb_24px mb_40px"
    >
      <h2
        class="c_gray.600 fs_1.25rem fw_bold mb_4 lh_tight m_0 "
      >
        Owed
      </h2>
      <div
        class="d_flex flex-wrap_wrap gap_20px mt_16px"
      >
        AccountsCard
      </div>
    </div>
  </div>
</div>
`;

exports[`<AccountsContainer /> > should render as expected when no accounts exist 1`] = `
<div>
  <div
    class="d_flex flex-d_row ai_center jc_space-between mt_20px mb_20px"
  >
    <h1
      class="c_primary fs_1.5rem fw_bold lh_tight m_0 "
    >
      accounts
    </h1>
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_6 py_3 fs_sm lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_background c_text.primary bd_1px_solid bd-c_border hover:bg_accent hover:c_accent.foreground"
      data-state="closed"
      type="button"
    >
      addAccount
    </button>
  </div>
  <div
    class="d_flex flex-d_column gap_10 "
  />
</div>
`;
